# NumberFormatPython

./: .env  main.py  pyproject.toml
front/: index.html  script.js
helper/: handler.php  install.php
