[tool.poetry]
name = "numberformat"
version = "0.1.0"
description = ""
authors = ["g0c0de0rd1e <kqlykjk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fast-bitrix24 = "^1.8.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
